refactor: migrate Collections/Arrays.asList to Java 9+ collection factories (#856)
* refactor: migrate Collections/Arrays.asList to Java 9+ factory methods

Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Collections.singletonList() with List.of(),
Collections.emptyList() with List.of(), and Arrays.asList() with
List.of() in test code.

Result:
Cleaner, more idiomatic Java 17 code with immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization

* fix: revert Collections.emptyList to original API

Motivation:
Review feedback: prefer Collections.emptyList() over List.of() for empty
collections since it uses a well-known immutable singleton API.

Modification:
Revert empty list conversions while keeping non-empty Arrays.asList ->
List.of conversions.

Result:
Empty collections use the established Collections.emptyList() API.

* fix: apply javafmt formatting

Motivation:
CI javafmt check failed after reverting empty collection conversions.

Modification:
Run sbt javafmtAll to fix formatting in HealthCheckTest.java.

Result:
javafmt CI check passes.