@@ -16,7 +16,6 @@ package org.apache.pekko.management;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.typesafe.config.ConfigFactory;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -72,8 +71,7 @@ public class HealthCheckTest {
   @Test
   public void okReturnsTrue() throws Exception {
     List<NamedHealthCheck> healthChecks =
-        Collections.singletonList(
-            new NamedHealthCheck("Ok", "org.apache.pekko.management.HealthCheckTest$Ok"));
+        List.of(new NamedHealthCheck("Ok", "org.apache.pekko.management.HealthCheckTest$Ok"));
     HealthChecks checks =
         new HealthChecks(
             system,
@@ -96,8 +94,7 @@ public class HealthCheckTest {
   @Test
   public void notOkayReturnsFalse() throws Exception {
     List<NamedHealthCheck> healthChecks =
-        Collections.singletonList(
-            new NamedHealthCheck("Ok", "org.apache.pekko.management.HealthCheckTest$Ok"));
+        List.of(new NamedHealthCheck("Ok", "org.apache.pekko.management.HealthCheckTest$Ok"));
     HealthChecks checks =
         new HealthChecks(
             system,
@@ -120,8 +117,7 @@ public class HealthCheckTest {
   @Test
   public void creatableThroughLegacyConstructor() throws Exception {
     List<NamedHealthCheck> healthChecks =
-        Collections.singletonList(
-            new NamedHealthCheck("Ok", "org.apache.pekko.management.HealthCheckTest$Ok"));
+        List.of(new NamedHealthCheck("Ok", "org.apache.pekko.management.HealthCheckTest$Ok"));
     HealthChecks checks =
         new HealthChecks(
             system,
@@ -138,7 +134,7 @@ public class HealthCheckTest {
   @Test
   public void throwsReturnsFailed() throws Exception {
     List<NamedHealthCheck> healthChecks =
-        Collections.singletonList(
+        List.of(
             new NamedHealthCheck("Throws", "org.apache.pekko.management.HealthCheckTest$Throws"));
     HealthChecks checks =
         new HealthChecks(
@@ -162,11 +158,11 @@ public class HealthCheckTest {
   @Test
   public void defineViaActorSystemSetup() throws Exception {
     StartupCheckSetup startupCheckSetup =
-        StartupCheckSetup.create(system -> Collections.singletonList(new NotOk(system)));
+        StartupCheckSetup.create(system -> List.of(new NotOk(system)));
     ReadinessCheckSetup readinessSetup =
-        ReadinessCheckSetup.create(system -> Arrays.asList(new Ok(), new NotOk(system)));
+        ReadinessCheckSetup.create(system -> List.of(new Ok(), new NotOk(system)));
     LivenessCheckSetup livenessSetup =
-        LivenessCheckSetup.create(system -> Collections.singletonList(new NotOk(system)));
+        LivenessCheckSetup.create(system -> List.of(new NotOk(system)));
     // bootstrapSetup is needed for config (otherwise default config)
     BootstrapSetup bootstrapSetup = BootstrapSetup.create(ConfigFactory.parseString("some=thing"));
     ActorSystemSetup actorSystemSetup =
